TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "132845872311424" [label="Start"];
  "132845872311424" -> "132845872311568";
  "132845872311568" [label="Code"];
  "132845872311568" -> "132845872311760";
  "132845872311760" [label="Function"];
  "132845872311760" -> "132845872311952";
  "132845872311760" -> "132845872312096";
  "132845872311760" -> "132845872312240";
  "132845872311952" [label="main"];
  "132845872312096" [label="Parameters"];
  "132845872312240" [label="Code"];
  "132845872312240" -> "132845872312432";
  "132845872312240" -> "132845872313008";
  "132845872312240" -> "132845872313584";
  "132845872312432" [label="Scope"];
  "132845872312432" -> "132845872312624";
  "132845872312624" [label="Declaration"];
  "132845872312624" -> "132845872312816";
  "132845872312624" -> "132845872312960";
  "132845872312816" [label="x"];
  "132845872312960" [label="1"];
  "132845872313008" [label="Scope"];
  "132845872313008" -> "132845872313200";
  "132845872313200" [label="Declaration"];
  "132845872313200" -> "132845872313392";
  "132845872313200" -> "132845872313536";
  "132845872313392" [label="x"];
  "132845872313536" [label="2"];
  "132845872313584" [label="Return"];
  "132845872313584" -> "132845872313776";
  "132845872313776" [label="0"];
}
